# desmixador

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
src/: autostems.py
src/api/: main.py
src/auto/: classify.py  engine.py  nmf_split.py  post.py  report.py  utils.py
src/web/: app_streamlit.py
