[project]
name = "desmixador"
version = "1.0.0"
description = "Separação adaptativa (Auto-K) de stems com Demucs + NMF + classificação."
authors = [{name = "desmixador"}]
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I"]
ignore = ["E203","E501"]

[tool.ruff.isort]
known-first-party = ["auto"]
profile = "black"
